<resources>
    <string name="app_name">Nuevo Encuentro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>

    <string name="auth_type">coop.nuevoencuentro</string>
    <string name="provider">coop.nuevoencuentro.provider</string>

    <string name="actividades">Actividades</string>
    <string name="talleres">Talleres</string>
    <string name="compras_comunitarias">Compras Comunitarias</string>
    <string name="contacto">Contacto</string>
    <string name="comunicacion">Comunicación</string>
    <string name="compartir">Compartir</string>
    <string name="salir">Cerrar Sesión</string>

    <string name="facebook_app_id" translatable="false">1770519086495157</string>

    <string name="iniciar_sesion">Se debe iniciar sesión para utilizar el sistema</string>
    <string name="bienvenida">Hola %1$s!</string>
    <string name="gcm_senderid">548299616185</string>
    <string name="mi_comuna">Mi Comuna</string>
    <string name="registro_bien">Se registró la aplicación, ya puede recibir notificaciones!</string>
    <string name="registro_mal">Hubo un error al registrar la aplicación\nSe seguirá intentando!</string>
    <string name="compartir_asunto">Que estas esperando?? Bajate nuestra aplicación!</string>
    <string name="compartir_titulo">Compartir vía</string>
    <string name="direccion">Vení a conocer nuestro local\nCalderón de la Barca 1674 {fa-hand-peace-o}</string>
    <string name="seguinos_twitter">Seguinos {fa-twitter}</string>
    <string name="escribinos_envelope">Escribinos {fa-envelope}</string>
    <string name="seguinos_insta">Seguinos {fa-instagram}</string>
    <string name="fa_zoom">{fa-search}</string>
    <string name="fa_facebook">{fa-facebook}</string>
    <string name="tener_instalado">Para compartir es necesario tener instalado el Facebook</string>
    <string name="error_flyer">Error al obtener el flyer</string>
    <string name="obteniendo_flyer">Cargando...</string>
    <string name="noticias">Noticias</string>
    <string name="fa_arrow_right_35sp_color_colorprimary">{fa-arrow-right 35sp @color/colorPrimary}</string>
    <string name="nombre">Nombre</string>
    <string name="invitado">Si entras como invitado no vas a poder disfrutar de todas las opciones</string>
    <string name="invitado_ingreso">Ingresar como invitado</string>
    <string name="com_facebook_loginview_log_in_button_long">Ingresar con Facebook</string>
    <string name="iniciar_sesion_fb">Para compartir esta actividad tenes que inciar sesion con Facebook</string>
    <string name="cargando">Cargando</string>
    <string name="title_activity_configuracion">Configuración</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="titulo_notif_bolson">No te quedes sin tu bolson!!</string>
    <string name="desc_notif_bolson">Desde hoy podes hacer tu pedido!</string>
    <string name="titulo_notif_actividades">Hay actividades nuevas!</string>
    <string name="desc_notif_actividades">No te pierdas las ultimas novedades</string>
    <string name="titulo_notif_noticias">Siempre al dia!</string>
    <string name="desc_notif_noticias">Mantenete al tanto de las ultimas noticias</string>
    <string name="conf_notificaciones">{fa-bell 24sp} Notificaciones</string>
    <string name="nueva_noticia">Nueva noticia</string>
    <string name="nueva_actividad_taller">Nueva actividad/Taller</string>
    <string name="compra_de_bolsones">Compra de bolsones</string>
    <string name="mensajes">Mensajes</string>
    <string name="ingresar_como_invitado">{fa-user} Ingresar como invitado</string>
    <string name="error_cargando">Error cargando la imagen</string>
    <string name="cargando_noticias">{fa-spinner 50sp spin @color/colorPrimary}</string>
    <string name="cargando_actividades">{fa-spinner 50sp spin @color/colorAccent}</string>
    <string name="nombre_obligatorio">El nombre es obligatorio</string>
    <string name="conf_acerca_de">{fa-info 24sp} Acerca De</string>
    <string name="version">Version</string>
    <string name="action_admin">Agregar</string>
    <string name="titulo">Titulo</string>
    <string name="desc">Descripción</string>
    <string name="cuando">Cuando</string>

    <string name="no">No repite</string>
    <string name="una">Cada 1 Semana</string>
    <string name="dos">Cada 2 Semana</string>
    <string name="tres">Cada 3 Semana</string>
    <string name="cuatro">Cada 4 Semana</string>
    <string name="agregar_foto">{fa-camera 46sp}\n\nAgregar Foto</string>
    <string name="notificar">Notificar</string>
    <string name="grabar">{fa-save} Grabar</string>
    <string name="obligatorio">Campo obligatorio</string>
    <string name="nuevo_taller">Nuevo taller</string>
    <string name="nueva_actividad">Nueva actividad</string>
    <string name="link">Link</string>
    <string name="calificar_app">Calificá la aplicación!</string>
    <string name="calificando_la_aplicaci_n_nos_ayudas_a_mejorarla">Si te gusta nuestra aplicación, danos una mano calificandola!\nNo te va a llevar más de un minuto, gracias!</string>
    <string name="nueva_bolson">Nuevo Bolson</string>
    <string-array name="repeticion">
        <item>@string/no</item>
        <item>@string/una</item>
        <item>@string/dos</item>
        <item>@string/tres</item>
        <item>@string/cuatro</item>
    </string-array>


    <string name="eliminar">¿Está seguro que desea eliminar %1$s?</string>
    <string name="eliminar_titulo">Eliminar</string>
    <string name="twitter">Twitter</string>
    <string name="action_notif">Notificación</string>
    <string name="mensaje">Mensaje</string>
    <string name="error_internet">Hubo un error al acceder al portal</string>
    <string name="feriantes">Feriantes</string>
    <string name="detalle">Detalle</string>
    <string name="error_llamando">Error con el número</string>
    <string name="titulo_notif_feriantes">Nuevo Feriante</string>
    <string name="desc_notif_feriante">No te pierdas nuestro modulo de feriantes artesansales!</string>
    <string name="seleccione_una_opcion">Seleccione un tipo de bolsón</string>
</resources>
