<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_noticias"
            android:title="@string/noticias" />
        <item
            android:id="@id/nav_actividades"
            android:title="@string/actividades" />
        <item
            android:id="@id/nav_talleres"
            android:title="@string/talleres" />
        <item
            android:id="@id/nav_compras_comunitarias"
            android:checkable="false"
            android:title="@string/compras_comunitarias" />

        <item
            android:id="@id/nav_feriantes"
            android:title="@string/feriantes" />
        <item
            android:id="@id/nav_twitter"
            android:title="@string/twitter" />


        <item
            android:id="@id/nav_contacto"
            android:title="@string/contacto" />
        <item
            android:id="@id/nav_ubicacion"
            android:title="@string/mi_comuna" />
    </group>

    <item android:title="@string/comunicacion">
        <menu>
            <item
                android:id="@id/nav_compartir"
                android:title="@string/compartir" />
            <item
                android:id="@id/nav_salir"
                android:title="@string/salir" />
        </menu>
    </item>

</menu>
