<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@id/itv_camara_actividades"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:shadowColor="@color/negrotransparente"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/agregar_foto"
                android:textSize="26sp" />

            <ImageView
                android:id="@id/iv_cargada_actividad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />


        </FrameLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_cuando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuando" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@id/sp_repite"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/repeticion"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <CheckBox
            android:id="@id/cb_notificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificar" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@id/btn_grabar_actividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/botones_mar"
            android:background="@drawable/botones"
            android:padding="@dimen/botones_pad"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/grabar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blanco" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>