<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/negrotransparente"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            card_view:cardBackgroundColor="#F5F5F5"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/conf_notificaciones"
                    android:textSize="24sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@id/tb_noticia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/nueva_noticia"
                    android:textSize="@dimen/fuente_conf"
                    android:theme="@style/Color1SwitchStyle" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@id/tb_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/nueva_actividad_taller"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/fuente_conf"
                    android:theme="@style/Color1SwitchStyle" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@id/tb_taller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/compra_de_bolsones"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/fuente_conf"
                    android:theme="@style/Color1SwitchStyle" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@id/tb_mensajes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/mensajes"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/fuente_conf"
                    android:theme="@style/Color1SwitchStyle" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/negrotransparente"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            card_view:cardBackgroundColor="#F5F5F5"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/conf_acerca_de"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/version"
                        android:textSize="@dimen/fuente_conf_info" />

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@id/tv_version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:gravity="end"
                        android:textSize="@dimen/fuente_conf_info" />
                </LinearLayout>

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="{fa-copyright} No fue magia {fa-hand-peace-o}"
                    android:textSize="@dimen/fuente_conf_info" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>